--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="00:00"
+        android:text="20:00"
         android:textSize="48sp"
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/btn_start_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Start" />
 
     <Button
+        android:id="@+id/btn_reset_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reset" />
